<resources>
    <string name="app_name">IP Info</string>
    <string name="nom_d_utilisateur">Username</string>
    <string name="mot_de_passe">Password</string>
    <string name="s_identifier">Login</string>
    <string name="show">Show</string>
    <string name="region">Region:</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>
    <string name="user_info">User info:</string>
</resources>