<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IPInfoActivity">

    <TextView
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginVertical="5dp"
        android:gravity="center"
        android:text="@string/user_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:digits="0123456789."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfo" />

    <Button
        android:id="@+id/showButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchField" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showButton">

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/purple_200"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:text="@string/city" />

        <TextView
            android:id="@+id/region"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:background="@color/purple_200"
            android:text="@string/region" />

        <TextView
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:background="@color/purple_200"
            android:text="@string/country" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>